infra/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-ingress
  namespace: microservices
  annotations:
    # rewrite not needed when paths align 1:1 with app routes
    # nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: brototype.intellectx.com
    http:
      paths:
      - path: /api/auth
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port:
              number: 80
      - path: /api/user
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port:
              number: 80
      - path: /business
        pathType: Prefix
        backend:
          service:
            name: business-service
            port:
              number: 80
      - path: /project
        pathType: Prefix
        backend:
          service:
            name: project-service
            port:
              number: 80
